update modal content and tabernia 2024 project description

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
         <div id="modal-container">
             <div id="modal">
-                <button class="close-modal" id="close-modal-btn">
+                <button class="close-modal" id="close-modal-btn" title="Exit">
                     &times;
                 </button>
                 <div class="modal-top">
@@ -51,9 +51,10 @@
                 <div class="modal-middle">
                     <p id="first-paragraph"></p>
                     <p>
-                        I've studied Front-end Development at Noroff Higher
-                        Vocational College from 2021-2023, where I learned about
-                        designing and creating web apps.
+                        I've learned about designing and creating web apps from
+                        my studies in web development at both Noroff and NTNU.
+                        I’ve also experienced working in a team with other
+                        developers through volunteer work.
                     </p>
                 </div>
                 <div class="modal-bottom">
@@ -74,15 +75,15 @@
                         <div id="box-row-2">
                             <div id="box-2">
                                 <h3>Coding</h3>
-                                <p>HTML</p>
-                                <p>CSS</p>
-                                <p>JavaScript</p>
-                                <p>Bootstrap</p>
                                 <p>React</p>
+                                <p>Vue 3</p>
+                                <p>Bootstrap</p>
+                                <p>Tailwind</p>
                             </div>
                             <div id="box-4">
                                 <h3>Headless CMS</h3>
                                 <p>WordPress</p>
+                                <p>Sanity</p>
                             </div>
                         </div>
                     </div>
@@ -205,10 +206,11 @@
                     </a>
                     <div class="info">
                         <p class="desc">
-                            Remake of an online store project from 2023 with the
-                            same name. The old project was made using
-                            React+Bootstrap. This new project is made with
-                            Vue+Tailwind, and uses a different dummy API.
+                            I wanted to learn some frameworks for JS and CSS, so
+                            I decided to remake the old Tabernia project from
+                            2023. The old one also used an API owned by the
+                            school, while this one uses an independent dummy
+                            API.
                         </p>
                         <div class="btns-tags">
                             <div class="buttons">
@@ -226,9 +228,9 @@
                                 </button>
                             </div>
                             <div class="tags">
+                                <p class="tag" title="Tag">Vite</p>
                                 <p class="tag" title="Tag">Vue 3</p>
                                 <p class="tag" title="Tag">Tailwind</p>
-                                <p class="tag" title="Tag">Vite</p>
                             </div>
                         </div>
                     </div>
