add 'the climate quiz' project, add box shadow to preview imgs to make the stand out more from the background

--- a/index.html
+++ b/index.html
@@ -238,6 +238,56 @@
                 <hr />
                 <div class="project">
                     <a
+                        href="https://tanix98.github.io/the-climate-quiz/pages/game.html"
+                        target="_blank"
+                        class="preview"
+                    >
+                        <img
+                            class="preview-img"
+                            src="src/assets/images/previews/climate_quiz_preview.webp"
+                            alt="Preview image of The Climate Quiz static website project"
+                        />
+                        <div class="img-overlay">
+                            <p class="project-title">The Climate Quiz</p>
+                        </div>
+                    </a>
+                    <div class="info">
+                        <p class="desc">
+                            Static website made for an assignment at NTNU. The
+                            code was written to be as semantic, accessible and
+                            environmentally sustainable as possible. Animated
+                            elements such as cards respect if the user has
+                            prefers reduced motion turned on, are readable for
+                            screen readers and can be activated with both click
+                            and tab+enter. The design does not just rely on
+                            colors, but also shapes to inform the user which
+                            page they're currently on.
+                        </p>
+                        <div class="btns-tags">
+                            <div class="buttons">
+                                <button
+                                    class="demo-btn"
+                                    id="climatequiz-demo-btn"
+                                >
+                                    Live site
+                                </button>
+                                <button
+                                    class="repo-btn"
+                                    id="climatequiz-repo-btn"
+                                >
+                                    GitHub repo
+                                </button>
+                            </div>
+                            <div class="tags">
+                                <p class="tag" title="Tag">HTML</p>
+                                <p class="tag" title="Tag">CSS</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr />
+                <div class="project">
+                    <a
                         href="https://holidaze-98.netlify.app/?page=1"
                         target="_blank"
                         class="preview"
