add settimeout to open and close modal functions to make modal accessible to keyboard users, improve modal variable names

--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
     </head>
     <body>
         <dialog id="modal">
-            <button
-                class="close-modal"
-                id="close-modal-btn"
-                title="Exit"
-                autofocus
-            >
+            <button class="close-modal" id="close-modal-btn" title="Exit">
                 &times;
             </button>
             <div class="modal-top">
